--- a/css/style.css
+++ b/css/style.css
@@ -203,3 +203,6 @@ h1, h2, h3, h4, h5, h6 {
     transform: rotate(-180deg);
 }
 
+.form-check-input:checked[type=radio] {
+    --bs-form-check-bg-image: url(../img/circle_radio.svg);
+}
