--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 260px;
     height: 130px;
     overflow: hidden;
+    margin: 0 auto;
     margin-bottom: 16px;
 }
 
@@ -345,7 +346,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .legend {
+    margin: 0 auto;
     margin-bottom: 16px;
+    max-width: 260px;
 }
 
 .legend div {
@@ -391,4 +394,5 @@ h1, h2, h3, h4, h5, h6 {
 .total {
     font-weight: bold;
     text-transform: uppercase;
+    text-align: center;
 }
